--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
+    "node-modules": "^1.0.1",
     "supertest": "^7.0.0"
   }
 }
